--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,15 +1,20 @@
 ---
 - name: create ext volume
   file: state=directory path={{ ext_kibana_volume }}
+  tags: docker
 
 - name: put kibana config
   template: src=config.js dest={{ ext_kibana_volume }}/config.js
+  tags: docker
 
 - name: check if kibana container is started
   command: bash -c "docker ps | grep kibana"
-  ignore_errors: True
+  failed_when: false
   register: result
+  changed_when: "'kibana' not in result.stdout"
+  tags: docker
 
 - name: start a kibana container
   command: docker run -d -h kibana-{{ ansible_hostname }} -p=8080:80 -v {{ ext_kibana_volume }}/config.js:/kibana/src/config.js -name kibana gitinsky/kibana:0.1.0
-  when: result|failed
+  when: result.changed
+  tags: docker
