implemented logs in dev

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,7 @@
 
 - name: put kibana config
   template: src=config.js dest={{ ext_kibana_volume }}/config.js
+  register: kibana_config
   tags: docker
 
 - name: check if kibana container is started
@@ -18,3 +19,21 @@
   command: docker run -d -h kibana-{{ ansible_hostname }} -p=8080:80 -v {{ ext_kibana_volume }}/config.js:/kibana/src/config.js -name kibana gitinsky/kibana:0.1.0 /usr/sbin/nginx -g "daemon off;"
   when: result.changed
   tags: docker
+
+# - name: start a kibana container
+#   docker:
+#     image: gitinsky/kibana:0.1.0
+#     state: "{{ 'restarted' if kibana_config.changed else 'reloaded' }}"
+#     hostname: "kibana-{{ ansible_hostname }}"
+#     ports:
+#         - "8080:80"
+#         - "9300:9300"
+#     volumes:
+#       - "{{ ext_kibana_volume }}/config.js:/kibana/src/config.js"
+#     name: kibana
+#     command: /usr/sbin/nginx -g "daemon off;"
+#   tags:
+#     - docker
+#     - kibana
+
+# command: docker run -d -h kibana-{{ ansible_hostname }} -p=8080:80 -v {{ ext_kibana_volume }}/config.js:/kibana/src/config.js -name kibana gitinsky/kibana:0.1.0 /usr/sbin/nginx -g "daemon off;"
