--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,7 @@
     - kibana
 
 - name: put kibana config
-  template: src=config.js dest={{ ext_kibana_volume }}/config.js
+  template: src=kibana.yml dest={{ ext_kibana_volume }}/kibana.yml
   register: kibana_config
   tags:
     - docker
@@ -14,17 +14,17 @@
 
 - name: start a kibana container
   docker:
-    image: gitinsky/kibana:0.1.0
+    image: gitinsky/kibana:latest
     state: "{{ 'restarted' if kibana_config.changed else 'reloaded' }}"
     hostname: "kibana-{{ ansible_hostname }}"
     ports:
-        - "8080:80"
+        - "8080:5601"
         - "9300:9300"
     volumes:
-      - "{{ ext_kibana_volume }}/config.js:/kibana/src/config.js"
+      - "{{ ext_kibana_volume }}/kibana.yml:/kibana/config/kibana.yml"
     name: kibana
     restart_policy: always
-    command: /usr/sbin/nginx -g "daemon off;"
+    command: /kibana/bin/kibana
   tags:
     - docker
     - kibana
